tests/build/cases/ui_node/delegate_list_expr_error_incorrect_mut.stderr
error[E0596]: cannot borrow `*children` as mutable, as it is behind a `&` reference
 --> cases/ui_node/delegate_list_expr_error_incorrect_mut.rs:8:60
  |
8 | #[ui_node(delegate_list = &self.inner, delegate_list_mut = &self.inner)]
  |                                                            ^----------
  |                                                            |
  |                                                            `children` is a `&` reference, so the data it refers to cannot be borrowed as mutable
  |                                                            help: consider changing this to be a mutable reference: `&mut self.inner`
